--- a/bean.html
+++ b/bean.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>關於綠豆的介紹</title>
+    <style>
+         .head{
+            font-family: '標楷體';
+            background-color: #003344;
+            color:white;
+            font-weight: bold;
+            font-size: 45px;
+           text-align: center;
+           padding: 30px;
+        }
+        .title{
+            font-size: 25px;
+            padding: 20px 0px ;
+        }
+    </style>
 </head>
 <body>
-    Hello World
+    <div class="head">關於陳楷勳的WeHelp申請書</div>
+
+    <div class="title">1.兩百字的自我介紹
+        <p>字</p>
+    </div>
 </body>
 </html>
