--- a/bean.html
+++ b/bean.html
@@ -25,7 +25,7 @@
     <div class="head">關於陳楷勳的WeHelp申請書</div>
 
     <div class="title">1.兩百字的自我介紹
-        <p>字</p>
+        <p>凌于緁是小胖子</p>
     </div>
 </body>
 </html>
