--- a/bean.html
+++ b/bean.html
@@ -19,13 +19,63 @@
             font-size: 25px;
             padding: 20px 0px ;
         }
+        .content{
+            font-size: 20px;
+        }
     </style>
 </head>
 <body>
     <div class="head">關於陳楷勳的WeHelp申請書</div>
 
     <div class="title">1.兩百字的自我介紹
-        <p>凌于緁是小胖子</p>
+        <div class="content">我目前是一位宜蘭大學大四電機系的學生，由於大三時的專題作業讓我對架設網站很感興趣</div>
+        <div class="content">之前有觀看過，很多免費的教學影片，但總覺得自己學得不夠精熟，所以想來繼續磨練</div>
+        <div class="content">且想趁著大四課業壓力較小參加訓練營來精進自己的程式語言能力，順便可以認識一些志同道合的朋友</div>
+        <div class="content">讓我在學習的路上可以不那麼孤單且更加有動力</div>
+    </div>
+
+    <div class="title">2.為了成為軟體工程師，曾做過什麼努力？
+        <div class="content">之前為了製作專題，簡單的看了金魚腦的30天網頁設計入門影片，並活用於我的專題作業中</div>
+        <div class="content">在此過程中我們組員沒有人會架設網站，都是我從什麼都不會慢慢架設出來的，我很享受這種成就感</div>
+        <div class="content">作品的部分由於都當時寫代碼的電腦被教授帶走了，當時也是用學校花錢買的伺服器(以前不知道GITHUB這麼偉大)</div>
+        <div class="content">所以無法展示出來，非常可惜。</div>
+    </div>
+    
+    <div class="title">3.如果參與這個計畫，會怎麼安排學習時間？
+        <div class="content">我這學期只有星期二三四有課，其他時間我可以用來安排學習，我知道當軟體工程師是一條不簡單的道路</div>
+        <div class="content">所以我會每天的晚上6點到10點安排自己學習，跟我當初的專題學習時間一樣，剩餘的時間可以做學習的作業</div>
+        <div class="content">或是做自己的興趣，例如:健身，跑步，或是找朋友吃飯跟練舞。</div>
+    </div>
+
+    <div class="title">4.是否有想要加入的軟體公司？為什麼想加入該公司？
+        <div class="content">之前看了Youtuber的介紹，我覺得Google是我很夢寐以求的公司，不僅僅是一間大公司</div>
+        <div class="content">且辦公環境舒服又乾淨，待遇也不差，但聽說很難進入，但前端工程師是講求作品的而不是學歷</div>
+        <div class="content">我相信只要我努力向上，有一天也可以去跟人家競爭這個崗位。</div>
+    </div>
+    
+    <div class="title">5.請描述一件你曾經碰到最困難的事情，如何克服？
+        <div class="content">目前對我來說最困難的應該是資金上的問題，因為39000加上房租對我一個學生而言不算是一個小數目，而我家人那邊也沒辦法幫助到我</div>
+        <div class="content">所以我只能靠著暑假沒課的時候打兩份工作另外在兼職跑UBER EAT來賺錢，目前都已經沒做了，賺來的錢我也覺得足夠我接下來的生活開銷</div>
+        <div class="content">就是這兩個月過得有點累，睜開眼睛就是上班，回到家洗個澡就直接睡著，相信這份幹勁用在學習軟體工程上一定很有用。</div>
+    </div>
+
+    <div class="title">6.關於這份申請網頁，請分享一個你開發時的技術心得。
+        <div class="content">這份網頁我因為不太知道要用什麼方式呈現，用得太花怕弄巧成拙所以我用最簡單得方式呈現，而其中我覺得最神奇的技術</div>
+        <div class="content">莫過於github了，我之前有看人家用過，但我不知道是幹嘛的，聽了澎澎老師的介紹之後，我才發現它的功能如此強大</div>
+        <div class="content">甚至可以當一個伺服器來架設網站，我太喜歡這功能了，我開始用它做了很多有趣的小實驗</div>
+        <div class="content">讓我在自己動手做網站時多了一份樂趣，這邊也感謝老師的詳細講解，講解的真的很清楚。</div>
+    </div>
+
+    <div class="title">7.從上次提出申請至今，多做了哪些努力？</div>
+    <div class="content">上次我認為我太輕視這份申請表了，我什麼都沒做就送出了，是我的不對，我以後作任何事情之前應該先看清楚再做</div>
+    <div class="content">而不是盲目又沒有頭緒就做。這次的我認真看了老師的直播紀錄以及網站上的教學資源，也認真評估了自己有沒有時間參加</div>
+    <div class="content">多方考量之下才下定決心要來認真學習，希望老師給我機會!!
+    </div>
+
+    <div class="title">8.其他想要對我們說的事情？
+        <div class="content">雖然老師說過，這裡的競爭很激烈，也需要投入大量的時間學習，因為要在半年內超越人家學習4年的步調</div>
+        <div class="content">但我知道自己只要肯努力一定可以做到，在多份兼職時我也一直告訴自己，不想後半輩子這麼辛苦就不要浪費訓練營的錢</div>
+        <div class="content">好好的在這半年的時間大放異彩，所以我是真心希望可以進入WeHelp這個大家庭，盼求老師給我機會。</div>
     </div>
 </body>
 </html>
